devops/k8s/back.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "backend"
  namespace: "#{namespace}#"
  labels:
    app: "backend"
spec:
  replicas: 2
#  strategy:
#      type: RollingUpdate
#      rollingUpdate:
#        maxSurge: 1
#        maxUnavailable: 0
  selector:
    matchLabels:
      app: "backend"
  template:
    metadata:
      labels:
        app: "backend"
    spec:
      containers:
      - name: "backend-1"
        image: "#{containerimage-backend}#"
        ports:
        - containerPort: 3000
#        readinessProbe:
#          httpGet:
#            path: /
#            port: 3000
#          initialDelaySeconds: 5
#          periodSeconds: 5
#          successThreshold: 1
---
apiVersion: "autoscaling/v2beta1"
kind: "HorizontalPodAutoscaler"
metadata:
  name: "backend-hpa-fdxb"
  namespace: "#{namespace}#"
  labels:
    app: "backend"
spec:
  scaleTargetRef:
    kind: "Deployment"
    name: "backend"
    apiVersion: "apps/v1"
  minReplicas: 1
  maxReplicas: 3
  metrics:
  - type: "Resource"
    resource:
      name: "cpu"
      targetAverageUtilization: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: "#{namespace}#"
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
