devops/k8s/backend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-dev
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "backend"
  namespace: "devops-dev"
  labels:
    app: "backend"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "backend"
  template:
    metadata:
      labels:
        app: "backend"
    spec:
      containers:
      - name: "backend-1"
        image: "#{containerimage-backend}#"
        ports:
        - containerPort: 3000

---
apiVersion: "autoscaling/v2beta1"
kind: "HorizontalPodAutoscaler"
metadata:
  name: "backend-hpa-fdxb"
  namespace: "devops-dev"
  labels:
    app: "backend"
spec:
  scaleTargetRef:
    kind: "Deployment"
    name: "backend"
    apiVersion: "apps/v1"
  minReplicas: 1
  maxReplicas: 2
  metrics:
  - type: "Resource"
    resource:
      name: "cpu"
      targetAverageUtilization: 80
---

#apiVersion: v1
#kind: Service
#metadata:
#  name: backend
#spec:
# selector:
#  app: backend
# ports:
# - protocol: TCP
#   port: 3000
#   targetPort: 3000


apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: "devops-dev"
  labels:
    name: backend
spec:
  type: LoadBalancer
  ports:
    - name: backend
      port: 3000
      targetPort: 3000
  selector:
    app: backend
