devops/k8s/frontend.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "frontend"
  namespace: "#{namespace}#"
  labels:
    app: "frontend"
spec:
  replicas: 2
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
  selector:
    matchLabels:
      app: "frontend"
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
      - name: "frontend-1"
        image: "#{containerimage-frontend}#"
        ports:
        - containerPort: 4200
        readinessProbe:
          httpGet:
            path: /
            port: 4200
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
---
apiVersion: "autoscaling/v2beta1"
kind: "HorizontalPodAutoscaler"
metadata:
  name: "frontend-hpa-fdxb"
  namespace: "#{namespace}#"
  labels:
    app: "frontend"
spec:
  scaleTargetRef:
    kind: "Deployment"
    name: "frontend"
    apiVersion: "apps/v1"
  minReplicas: 1
  maxReplicas: 3
  metrics:
  - type: "Resource"
    resource:
      name: "cpu"
      targetAverageUtilization: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: "#{namespace}#"
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 4200
      targetPort: 4200
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: #{nodeport}#



# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend
#   namespace: "#{namespace}#"
#   labels:
#     name: frontend
# spec:
#   type: LoadBalancer
#   ports:
#     - name: frontend
#       port: 4200
#       targetPort: 4200
#   selector:
#     app: frontend
