devops/k8s/ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
  generation: 1
  managedFields:
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    manager: GoogleCloudConsole
    operation: Update
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    manager: glbc
    operation: Update
  name: frontenddev
  namespace: devops-dev
spec:
  backend:
    serviceName: frontend
    servicePort: 4200
status:
  loadBalancer:
    ingress:
    - ip: #{ingressip}#
